--- a/KoreaLandMarksApp/Base.lproj/Main.storyboard
+++ b/KoreaLandMarksApp/Base.lproj/Main.storyboard
@@ -1,24 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eTk-fq-D3a">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--한국의 명소-->
+        <scene sceneID="gS5-0t-GrY">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="iNn-MD-7WC" customClass="TableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Z2c-jz-lhz">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="121" id="Yh8-sG-CfR" customClass="TableViewCell">
+                                <rect key="frame" x="0.0" y="28" width="375" height="121"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Yh8-sG-CfR" id="5Uq-Ze-GFY">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="HBQ-DP-dTe">
+                                            <rect key="frame" x="151" y="18" width="208" height="38"/>
+                                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ypy-zd-lma">
+                                            <rect key="frame" x="151" y="65" width="208" height="38"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kyungBokGoong" translatesAutoresizingMaskIntoConstraints="NO" id="qk0-6s-Fzf">
+                                            <rect key="frame" x="16" y="18" width="127" height="85"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="85" id="dvG-yH-DJt"/>
+                                                <constraint firstAttribute="width" constant="127" id="ubT-35-P5z"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="HBQ-DP-dTe" firstAttribute="top" secondItem="5Uq-Ze-GFY" secondAttribute="topMargin" constant="7" id="5gB-RH-MMF"/>
+                                        <constraint firstItem="Ypy-zd-lma" firstAttribute="height" secondItem="HBQ-DP-dTe" secondAttribute="height" id="7oO-MQ-hfh"/>
+                                        <constraint firstItem="Ypy-zd-lma" firstAttribute="leading" secondItem="qk0-6s-Fzf" secondAttribute="trailing" constant="8" id="JMu-Og-xEU"/>
+                                        <constraint firstItem="qk0-6s-Fzf" firstAttribute="leading" secondItem="5Uq-Ze-GFY" secondAttribute="leadingMargin" id="Kib-q4-ANf"/>
+                                        <constraint firstItem="Ypy-zd-lma" firstAttribute="top" secondItem="HBQ-DP-dTe" secondAttribute="bottom" constant="9" id="UOQ-Rg-iV2"/>
+                                        <constraint firstItem="HBQ-DP-dTe" firstAttribute="leading" secondItem="qk0-6s-Fzf" secondAttribute="trailing" constant="8" id="b7B-uO-vXx"/>
+                                        <constraint firstItem="qk0-6s-Fzf" firstAttribute="top" secondItem="5Uq-Ze-GFY" secondAttribute="topMargin" constant="7" id="cRw-FS-3uP"/>
+                                        <constraint firstItem="Ypy-zd-lma" firstAttribute="width" secondItem="HBQ-DP-dTe" secondAttribute="width" id="hsG-sY-5Vi"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Ypy-zd-lma" secondAttribute="bottom" constant="7" id="i4y-Vy-Y2R"/>
+                                        <constraint firstItem="HBQ-DP-dTe" firstAttribute="trailing" secondItem="5Uq-Ze-GFY" secondAttribute="trailingMargin" id="tAT-8m-lzR"/>
+                                        <constraint firstItem="Ypy-zd-lma" firstAttribute="trailing" secondItem="5Uq-Ze-GFY" secondAttribute="trailingMargin" id="uxt-6g-RIx"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="qk0-6s-Fzf" secondAttribute="bottom" constant="7" id="vVz-0X-KUb"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="cellAddress" destination="Ypy-zd-lma" id="Kep-Ub-WGu"/>
+                                    <outlet property="cellImage" destination="qk0-6s-Fzf" id="Crs-4c-157"/>
+                                    <outlet property="cellTitle" destination="HBQ-DP-dTe" id="heg-uu-Smx"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="iNn-MD-7WC" id="Gri-J2-0u3"/>
+                            <outlet property="delegate" destination="iNn-MD-7WC" id="dK0-CD-WYk"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="한국의 명소" id="rcl-Cm-rLB"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9gJ-l6-7Ip" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1012" y="-26.53673163418291"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="uLo-9I-O7g">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eTk-fq-D3a" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3dh-je-7dl">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <offsetWrapper key="textShadowOffset" horizontal="2" vertical="2"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="iNn-MD-7WC" kind="relationship" relationship="rootViewController" id="1xh-gN-IeG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="siW-Ca-ssH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="260" y="-27"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="kyungBokGoong" width="800" height="571"/>
+    </resources>
 </document>
