--- a/KoreaLandMarksApp/Base.lproj/Main.storyboard
+++ b/KoreaLandMarksApp/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -64,6 +65,7 @@
                                     <outlet property="cellAddress" destination="Ypy-zd-lma" id="Kep-Ub-WGu"/>
                                     <outlet property="cellImage" destination="qk0-6s-Fzf" id="Crs-4c-157"/>
                                     <outlet property="cellTitle" destination="HBQ-DP-dTe" id="heg-uu-Smx"/>
+                                    <segue destination="rXQ-I1-OPc" kind="show" identifier="showDetail" id="Y0d-yb-WTn"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -78,6 +80,108 @@
             </objects>
             <point key="canvasLocation" x="1012" y="-26.53673163418291"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="vgU-dL-e9g">
+            <objects>
+                <viewController id="rXQ-I1-OPc" customClass="DetailViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4Jg-43-mAI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kyungBokGoong" translatesAutoresizingMaskIntoConstraints="NO" id="N19-b3-bSW">
+                                <rect key="frame" x="0.0" y="64" width="375" height="214"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="214" id="hUw-VZ-bqB"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="DP6-rB-kbs">
+                                <rect key="frame" x="16" y="286" width="343" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="ImD-Bo-VDz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="E08-tM-Fie">
+                                <rect key="frame" x="16" y="325" width="343" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="71E-l6-DdC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="p5c-Fa-Stv">
+                                <rect key="frame" x="16" y="364" width="343" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="aeB-gn-e8O"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="kYd-dI-5od">
+                                <rect key="frame" x="16" y="500" width="343" height="98"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="98" id="Wdr-3v-CTG"/>
+                                </constraints>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LFR-gW-GqJ">
+                                <rect key="frame" x="16" y="606" width="343" height="40"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="bWu-V9-EAU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
+                                <size key="titleShadowOffset" width="1" height="1"/>
+                                <state key="normal" title="오시는 길">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="directions:" destination="rXQ-I1-OPc" eventType="touchUpInside" id="Fmh-2p-Oan"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="N19-b3-bSW" firstAttribute="leading" secondItem="OnH-sq-Hjx" secondAttribute="leading" id="27R-MP-yKj"/>
+                            <constraint firstItem="OnH-sq-Hjx" firstAttribute="trailing" secondItem="LFR-gW-GqJ" secondAttribute="trailing" constant="16" id="31J-AL-izd"/>
+                            <constraint firstItem="E08-tM-Fie" firstAttribute="top" secondItem="DP6-rB-kbs" secondAttribute="bottom" constant="8" id="8Ra-GP-15U"/>
+                            <constraint firstItem="OnH-sq-Hjx" firstAttribute="bottom" secondItem="LFR-gW-GqJ" secondAttribute="bottom" constant="21" id="9hY-3p-7TA"/>
+                            <constraint firstItem="DP6-rB-kbs" firstAttribute="top" secondItem="N19-b3-bSW" secondAttribute="bottom" constant="8" id="BGR-Ck-aP4"/>
+                            <constraint firstItem="N19-b3-bSW" firstAttribute="trailing" secondItem="OnH-sq-Hjx" secondAttribute="trailing" id="LCC-BU-XhU"/>
+                            <constraint firstItem="p5c-Fa-Stv" firstAttribute="leading" secondItem="OnH-sq-Hjx" secondAttribute="leading" constant="16" id="Le2-sp-SNC"/>
+                            <constraint firstItem="OnH-sq-Hjx" firstAttribute="trailing" secondItem="p5c-Fa-Stv" secondAttribute="trailing" constant="16" id="MQJ-81-sSz"/>
+                            <constraint firstItem="kYd-dI-5od" firstAttribute="leading" secondItem="OnH-sq-Hjx" secondAttribute="leading" constant="16" id="WWI-tV-gnb"/>
+                            <constraint firstItem="N19-b3-bSW" firstAttribute="top" secondItem="OnH-sq-Hjx" secondAttribute="top" id="XWJ-Hh-QoU"/>
+                            <constraint firstItem="OnH-sq-Hjx" firstAttribute="trailing" secondItem="DP6-rB-kbs" secondAttribute="trailing" constant="16" id="ZY0-Nl-dke"/>
+                            <constraint firstItem="kYd-dI-5od" firstAttribute="top" secondItem="p5c-Fa-Stv" secondAttribute="bottom" constant="8" id="fVF-ya-zcR"/>
+                            <constraint firstItem="OnH-sq-Hjx" firstAttribute="trailing" secondItem="E08-tM-Fie" secondAttribute="trailing" constant="16" id="hjg-A1-iXh"/>
+                            <constraint firstItem="E08-tM-Fie" firstAttribute="leading" secondItem="OnH-sq-Hjx" secondAttribute="leading" constant="16" id="idE-ja-AXy"/>
+                            <constraint firstItem="p5c-Fa-Stv" firstAttribute="top" secondItem="E08-tM-Fie" secondAttribute="bottom" constant="8" id="lFF-ks-4TY"/>
+                            <constraint firstItem="LFR-gW-GqJ" firstAttribute="top" secondItem="kYd-dI-5od" secondAttribute="bottom" constant="8" id="nRD-T7-FvO"/>
+                            <constraint firstItem="DP6-rB-kbs" firstAttribute="leading" secondItem="OnH-sq-Hjx" secondAttribute="leading" constant="16" id="pFs-2a-xzr"/>
+                            <constraint firstItem="LFR-gW-GqJ" firstAttribute="leading" secondItem="OnH-sq-Hjx" secondAttribute="leading" constant="16" id="pT5-TJ-LV5"/>
+                            <constraint firstItem="OnH-sq-Hjx" firstAttribute="trailing" secondItem="kYd-dI-5od" secondAttribute="trailing" constant="16" id="wvl-Xo-Wnk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="OnH-sq-Hjx"/>
+                    </view>
+                    <connections>
+                        <outlet property="button" destination="LFR-gW-GqJ" id="K7n-ok-N3S"/>
+                        <outlet property="detailAddress" destination="E08-tM-Fie" id="rbv-BG-5pT"/>
+                        <outlet property="detailDescription" destination="p5c-Fa-Stv" id="kS7-DE-RKZ"/>
+                        <outlet property="detailImage" destination="N19-b3-bSW" id="OWW-Lr-GCt"/>
+                        <outlet property="detailTitle" destination="DP6-rB-kbs" id="WO7-Wd-jCi"/>
+                        <outlet property="mapView" destination="kYd-dI-5od" id="iOC-Nb-Znh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Iwg-rv-HLt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1709.5999999999999" y="-27.436281859070466"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="uLo-9I-O7g">
             <objects>
@@ -86,6 +190,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3dh-je-7dl">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
